# miniature

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  README  README.qt-sdk  autogen.sh  config.pri  configure.ac  data.qrc  miniature-game.prf  miniature.desktop  miniature.pro  miniature.sh  runtests.sh  template.cc  template.h  tests.sh
data/: Miniature.client  MiniatureApprover.client  data.qrc  miniature.desktop.in  org.freedesktop.Telepathy.Client.Miniature.service.in  org.freedesktop.Telepathy.Client.MiniatureApprover.service.in  org.maemo.miniature.service.in
data/icons/: LICENSE
data/pieces/: LICENSE
debian/: changelog  control  copyright  libminiature-game-dev.install  libminiature-game0.install  miniature-game.install  miniature.install  miniature.postinst  rules  source.lintian-overrides
doc/: class_diagram.txt  miniature.doxygen
docs/: Doxyfile
extensions/: Makefile.am  all.xml  extensions-cli.c  extensions.h  generic-types.xml  misc.xml
game/: abstractbackend.cc  abstractbackend.h  abstractcommand.cc  abstractcommand.h  abstractengine.cc  abstractengine.h  abstractlink.cc  abstractlink.h  abstractparser.cc  abstractparser.h  abstractside.cc  abstractside.h  abstracttokenizer.cc  abstracttokenizer.h  cliparser.cc  cliparser.h  commandline.cc  commandline.h  commandparser.cc  commandparser.h  commands.h  directinputdevice.cc  directinputdevice.h  dispatcher.cc  dispatcher.h  ficsparser.cc  ficsparser.h  ficsside.cc  ficsside.h  frontend.cc  frontend.h  game.cc  game.h  game.pro  gnuchess.cc  gnuchess.h  linereader.cc  linereader.h  localparser.cc  localparser.h  (+15 more)
game/commands/: activategame.cc  activategame.h  advertisement.cc  advertisement.h  advertisementcommand.cc  advertisementcommand.h  commands.pri  creategame.cc  creategame.h  destroygame.cc  destroygame.h  gameended.cc  gameended.h  gameresolution.cc  gameresolution.h  invalidmove.cc  invalidmove.h  invalidseek.cc  invalidseek.h  login.cc  login.h  logincommand.cc  logincommand.h  loginfailed.cc  loginfailed.h  logout.cc  logout.h  logoutcommand.cc  logoutcommand.h  message.cc  message.h  move.cc  move.h  play.cc  play.h  record.cc  record.h  recordcommand.cc  recordcommand.h  seek.cc  (+1 more)
game/fics/: backend.cc  backend.h  engine.cc  engine.h  fics.pri  side.cc  side.h
game/frontend/: availableseeks.cc  availableseeks.h  chessboard.cc  chessboard.h  chessboardelement.cc  chessboardelement.h  frontend.cc  frontend.h  frontend.pri  gameelement.cc  gameelement.h  messagelog.cc  messagelog.h  miniature.cc  miniature.h  sideelement.cc  sideelement.h
src/: about.ui  action_area.cc  action_area.h  board.cc  board.h  board_view.cc  board_view.h  chess_piece_item.cc  chess_piece_item.h  dashboard_button.cc  dashboard_button.h  dashboard_item.cc  dashboard_item.h  dbusappactivator.cc  dbusappactivator.h  game.cc  game.h  game_log.cc  game_log.h  game_store.cc  game_store.h  gamemanager.cc  gamemanager.h  graphics_board_item.cc  graphics_board_item.h  half_move.cc  half_move.h  iconic_button.cc  iconic_button.h  incoming_connection.ui  local_game.cc  local_game.h  logic_analyzer.cc  logic_analyzer.h  main.cc  main.h  main_window.cc  main_window.h  mgameconfig.cc  mgameconfig.h  (+22 more)
src/frontend/: BoardModel.qml  MainPage.qml  OnlineBoard.qml  SeekGame.qml  frontend.qrc  main.qml  miniature.en.ts  miniature.es.qm  miniature.ts  miniature_es.ts  miniature_miniaturets_da_DK.qm  miniature_miniaturets_de.qm  miniature_miniaturets_de.ts  miniature_miniaturets_en_US.qm  miniature_miniaturets_en_US.ts  miniature_miniaturets_es.qm  miniature_miniaturets_es.ts  miniature_miniaturets_fi.qm  miniature_miniaturets_fr.qm  miniature_miniaturets_it.qm  miniature_miniaturets_ja.qm  miniature_miniaturets_nb.qm  miniature_miniaturets_ne_NP.qm  miniature_miniaturets_nl.qm  miniature_miniaturets_pl.qm  miniature_miniaturets_pt.qm  miniature_miniaturets_ro.qm  miniature_miniaturets_ru.qm  miniature_miniaturets_sv.qm  miniature_miniaturets_zh_CN.qm  miniature_miniaturets_zh_HK.qm
src/generic/: main.cc  main_window.cc
src/maemo5/: main.cc  main_window.cc
src/meego/: main_window.cc
src/pieces/: bishop.cc  bishop.h  king.cc  king.h  knight.cc  knight.h  pawn.cc  pawn.h  piece.cc  piece.h  piece_includes.h  queen.cc  queen.h  rook.cc  rook.h
src/telepathy/: accountselectiondlg.cc  accountselectiondlg.h  contact-chooser.cc  contact-chooser.h  tpaccountitem.cc  tpaccountitem.h  tpaccountlistmodel.cc  tpaccountlistmodel.h  tpaccountmanager.cc  tpaccountmanager.h  tpapprover.cc  tpapprover.h  tpapprovermanager.cc  tpapprovermanager.h  tpchatsession.cc  tpchatsession.h  tpcontactslistmodel.cc  tpcontactslistmodel.h  tpgame.cc  tpgame.h  tphelpers.cc  tphelpers.h  tpincomingtube.cc  tpincomingtube.h  tpoutgoingtube.cc  tpoutgoingtube.h  tptextclienthandler.cc  tptextclienthandler.h  tptubeclient.cc  tptubeclient.h  tptubesclienthandler.cc  tptubesclienthandler.h  tptubeserver.cc  tptubeserver.h
tests/: config.pri  template.cc  test-cli.py  tests.pro  testutils.h
tests/fics/: fics.cc  fics.pro
tests/game/: game.cc  game.pro
tests/gnuchess/: gnuchess.cc  gnuchess.pro
tests/localparser/: localparser.cc  localparser.pro
tests/position/: position.cc  position.pro
tests/testcommandparser/: testcliparser  testcommandparser.cc  testcommandparser.pro
tests/testfics/: testfics.cc  testfics.pro  testgnuchess
tests/testficsparser/: testficsparser.cc  testficsparser.pro
tests/testgame/: testgame.cc  testgame.pro
tests/testgnuchess/: testgnuchess.cc  testgnuchess.pro
tests/testlocalparser/: testlocalparser.cc  testlocalparser.pro
tests/testposition/: testposition.cc  testposition.pro
tests/utils/: scenario.cc  scenario.h  scenarioloader.cc  scenarioloader.h
